--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "mongodb": "^2.2.36",
     "react": "^16.13.1",
@@ -18,7 +19,8 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start:client": "react-scripts start",
     "start:server": "node server/index.mjs",
     "build": "react-scripts build",
     "test": "react-scripts test",
